0.1.0
Fixed double free bug in prefs.
Toggle bookmark bar now affects all open files and is remembered in the prefs.
Bookmarks can now be added/deleted by clicking on the icon in the bookmark bar.
Added a bookmark bar.
Added plea for money.
Fixed not jumping to line when selecting goto define and file is not already open.

0.0.32
Added new menu icons for 'New Editor' and 'New Admin Editor'.
Hidden languages no longer shown.
Source highlighting dropdown list now display language names properly.
Source highlighting dropdown list now definitely sorted.
Added 'Bug Reporting' link to help file as suggested.
Moved source higlighting selector to page tab from toolbar.
Fixed 'New Editor' not running as new proccess.
Fixed 'Manpage Editor' not running as new proccess.
Fixed Automake warning about new subdir-objects not set.

0.0.31
Updated 'Help' files.
Fixed multiple warnings that file has changed on disk.
Added 'live' preview of style scheme to prefs, 'Cancel' resets style and 'Apply' sets style.
Added local search path to styles so now also looks in ~/.gnome2/gedit/styles.
Added "Theme" to prefs.

0.0.30
fixed bug in determining mime type of file.
Fixed debian install instructions in INSTALL file.

0.0.29
Fixed infinite loop bug when no find text in find/replace dialog.
Fixed find/replace buttons not being labelled/dimmed correctly.
Fixed not showing replace in all files confirmation when not using regex.

0.0.28
Fixed minor bug in configure.ac script.
Replaced simple font name and size entry box in prefs with font select button.
Fixed Minor bug when using 'Go To Definition' from menu opens a new file jumping to wrong line number.
Minor updates to user submitted scripts.
If glib networking is installed if selecting "Open Man page" or "Search in GTK-Docs" can't find anything appropriate a google search is performed.

0.0.27
Fixed over enthusiastic utf8 conversion!
Example tools now use releative paths.
External tools can now use releative paths to command script.